[package]
name = "semver_constraints"
version = "0.1.0"
authors = ["David Cao <david@cao.st>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/elba/semver_constraints"
description = """
More robust and nuanced semantic version constraints.
"""
readme = "README.md"
keywords = ["version", "semantic", "compare"]
categories = ["development-tools", "parsing"]

[dependencies]
semver = "0.9"
itertools = "0.8"
indexmap = "1.0"
serde = { version = "1.0", optional = true }
nom = "4.2"
failure = "0.1"

[features]
default = []
